# Team_tilemate

./: .gitignore  README.md
src/cobot1/: package.xml  setup.py
src/cobot1/cobot1/: basic2.py  basic2_tile_pic_add.py  fire2.py  fire3.py  firebase_bridge.py  index.html  move_basic.py  move_pause_resume.py  move_periodic.py  move_scraper.py  ocv.py  ocv_ba.py  ocv_sim.py  scraper_task.py  scraper_task_module.py  sensor_test.py  testno.py  tile_pic_place3.py  tile_pic_place3_no_gripper.py
src/custom_tile_msgs/: CMakeLists.txt  package.xml
src/custom_tile_msgs/msg/: InspectionResult.msg  InspectionResultArray.msg  Tile.msg  TileArray.msg
src/tilemate_main/: package.xml  setup.cfg  setup.py
src/tilemate_main/launch/: new_tilemate.launch.py  tilemate.launch.py  tilemate_vision.launch.py
src/tilemate_main/resource/: yolov8n-cls_v1.pt
src/tilemate_main/test/: anomalib_node.py  depthtest.py  fake_modbus.py  move_test.py  roi_test.py
src/tilemate_main/tilemate_main/: Boilerplate.py  Tile placement-260222.py  Tile placement-260223.py  anomalib_node.py  command_node.py  complience_Test.py  cowork_action_server.py  defect_analyzer.py  depth_localizer.py  depthtest.py  gripper_node.py  (+36 more)
src/tilemate_msgs/: CMakeLists.txt  package.xml
src/tilemate_msgs/action/: Cowork.action  ExecuteJob.action  Inspect.action  MeasureTilt.action  PatternInspect.action  PickTile.action  PlaceTile.action  Press.action  Spread.action
src/tilemate_msgs/msg/: PatternScore.msg  PatternScoreArray.msg
src/tilemate_msgs/srv/: Inspect.srv
src/tilemate_web/: package.xml  setup.cfg  setup.py
(+25 files in other folders)
